2011-09-14 ede
  * throw image loading errors up to calling code
  * ReferencedImageFactoryFileLayerLoader does not create 
     empty layers if image loading failed anymore
  * OpenFileWizard now displays errors properly even when 
     the taskmonitor closes early
  * bugfix 3084927:
      ecw libraries choke on accented and other non ascii chars in loading path
      ECWImageFactory now checks if loading path is ascii only
       and throws a describing error if not

2011-09-11 ede
  * reworked about dialog
     now vertically resizable
     about tab displays scrollable oj_home/readme.txt now

2011-09-10 mmichaud <michael.michaud@free.fr>
    * Remove MultiInputDialogWithoutCancel, prepare 1.4.2 release
    
2011-09-09 mmichaud <michael.michaud@free.fr>
    * Language files improvements (it and es)
    
2011-09-08 mmichaud <michael.michaud@free.fr>
    * Try to fix bug 3404539 (borders with increasing width in statud bar)
      with workaround described in sun java database - bug 4131528
      (does not work with all look and feel)

2011-09-06 ede
    * added Geometry Converter Plugin to ojcore, available under
      LayerViewContextMenu "Convert Selected Geometries/Layers" &
      Main Menu "Tools->Edit Geometries->Convert Selected Geometries/Layers"
    * added /language/fonts/Code2000.ttf, a gpl'd unicode font and
      code in JUMPWorkbench to selectively switch to it if I18N.get("ui.MenuNames.FILE") 
      cannot be displayed by current jre font but by Code2000
    
2011-08-06 mmichaud <michael.michaud@free.fr>
    * small enhancments to ExtractLayersByAttribute

2011-09-04 mmichaud <michael.michaud@free.fr>
    * Revert change made by Matthias on 2011-09-01 in FeatureInstaller,
      because it breaks compatibility with external plugins

2011-09-03 mmichaud <michael.michaud@free.fr>
    * Small improvements and internationalization of EnterWKTDialog

2011-09-01 Matthias Scholz <ms@jammerhund.de>
	* FeatureInstaller.java: