@@ -1,3 +1,12 @@
+2011-09-18 mmichaud <michael.michaud@free.fr>
+  * Refactoring of EditTransaction class :
+    - use Set instead of List to avoid time-consuming "if (!list.contains())" 
+      operations
+    - remove geometry cloning in addFeature and deleteFeature : save time and 
+      memory. Hopefully, it will not break anything
+    All in all, the speed improvement maybe 10x and the memory save 50%
+    Change may slow down some operations, but I did not note it yet. 
+
 2011-09-14 ede
   * throw image loading errors up to calling code
   * ReferencedImageFactoryFileLayerLoader does not create 
